content/terraform-docs-agents/v1.6.x/docs/cloud-docs/agents/metrics.mdx
---
page_title: Metrics - Terraform Cloud Agents - Terraform Cloud and Terraform Enterprise
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-04-16T15:37:51-04:00
last_modified: 2025-04-16T15:37:51-04:00
# END AUTO GENERATED METADATA
---

# Metrics

The Terraform Cloud Agent emits numerous metrics describing the agent's
performance.

## Metric naming conventions

All metrics emitted by the Terraform Cloud Agent follow some general naming
conventions which convey useful context about the measurements.

* All metrics are prefixed by `tfc-agent.` to distinguish them from any
  other metrics in your environment.
* When a metric requires a unit in order to be understood, an un-abbreviated
  unit will be the last component of the metric name. For example, `.bytes`, or
  `.milliseconds`.
* All timing metrics (other than runtime metrics) are measured in milliseconds.
* All data size metrics are measured in bytes.
* Hyphens are used to separate words in metric names when submitted to the
  collector over the OTLP protocol. Some systems may automatically convert these
  to underscores.

## Metric data types

Terraform Cloud agents emit three types of metric data:

* Gauges submit an absolute number value at the end of a measurement period.
* Counters accumulate number values during a measurement period. The sum of the
  numbers is recorded at the end of a measurement period and the value is reset
  to zero for the next period.
* Timers measure the time taken to complete a task.

## Core metrics

The following metrics are generated by the Terraform Cloud Agent core program,
and are related to generic operations performed regularly by all agents. All
metrics in this section are prefixed by `tfc-agent.`.

| Meric name                   | Type  | Description                                                          |
| ---------------------------- | ----- | -------------------------------------------------------------------- |
| `status.busy`                | Gauge | Number of agents in `busy` status.                                   |
| `status.idle`                | Gauge | Number of agents in `idle` status.                                   |
| `register.milliseconds`      | Timer | Time to register the agent with Terraform Cloud.                     |
| `fetch-job.milliseconds`     | Timer | Time to complete a job dequeue request.                              |
| `update-status.milliseconds` | Timer | Time to send a status update over from the agent to Terraform Cloud. |

## Runtime metrics

The Terraform Cloud Agent produces a number of metrics which are generated by
the application runtime, and are primarily useful in debugging the tfc-agent.
These metrics are emitted periodically throughout the entire agent process
lifecycle. It is important to note that these metrics do not represent a
complete picture of resource utilization by the agent. The agent may fork child
processes (such as the Terraform binary or other programs) which maintain their
own distinct runtimes and consume resources independently of the agent. To
monitor resource utilization comprehensively, consider monitoring VM or
container metrics. All metrics in this section are prefixed by
`tfc-agent.runtime.`.

| Metric name                     | Type  | Description                                         |
| ------------------------------- | ----- | --------------------------------------------------- |
| `go.mem.heap-alloc.bytes`       | Gauge | Memory allocated to heap objects by the Go runtime. |
| `go.mem.heap-idle.bytes`        | Gauge | Memory allocated to the heap which are unused.      |
| `go.mem.heap-inuse.bytes`       | Gauge | Memory allocated to the heap which are in use.      |
| `go.mem.heap-sys.bytes`         | Gauge | Memory obtained from the OS for the heap.           |
| `go.mem.heap-released.bytes`    | Gauge | Memory returned to the OS during GC.                |
| `go.mem.heap-objects.count`     | Gauge | Number of allocated heap objects.                   |
| `go.mem.lookups.count`          | Gauge | Number of pointer lookups.                          |
| `go.mem.malloc.count`           | Gauge | Cumulative count of heap objects allocated.         |
| `go.mem.free.count`             | Gauge | Cumulative count of heap objects freed.             |
| `go.gc.count`                   | Gauge | Number of completed GC cycles.                      |
| `go.goroutines.count`           | Gauge | Number of running goroutines.                       |
| `go.gc.pause-total.nanoseconds` | Timer | Cumulative time spent in stop-the-world pauses.     |
| `uptime.milliseconds`           | Timer | Cumulative time since the agent started.            |

## Terraform component metrics

The following metrics are emitted by the `terraform` component, which is
responsible for handling Terraform operations like plans and applies. All
metrics in this section are prefixed by `tfc-agent.terraform.`.

| Metric name                                    | Type  | Description                                                                         |
| ---------------------------------------------- | ----- | ----------------------------------------------------------------------------------- |
| `configure-terraform-cli.milliseconds`         | Timer | Time spent configuring the Terraform CLI utility prior to execution.                |
| `handle-signal.milliseconds`                   | Timer | Time spent handling a signal from Terraform Cloud.                                  |
| `execute.milliseconds`                         | Timer | Time spent handling a Terraform operation.                                          |
| `output-stream.upload-chunk.bytes`             | Gauge | Size of a chunk of Terraform output uploaded.                                       |
| `output-stream.upload-chunk.milliseconds`      | Timer | Time spent uploading a single chunk of Terraform output.                            |
| `output-stream.upload-full.bytes`              | Gauge | Size of a full Terraform log uploaded.                                              |
| `output-stream.upload-full.milliseconds`       | Timer | Time spent uploading the full Terraform log.                                        |
| `output-stream.close.milliseconds`             | Timer | Time spent finalizing a Terraform output stream.                                    |
| `override-sensitive-variables.milliseconds`    | Timer | Time spent generating a configuration file to override variable sensitivity.        |
| `override-sensitive-variables.count`           | Gauge | Number of variables in a run of which Terraform Cloud modified the sensitivty flag. |
| `persist-filesystem.milliseconds`              | Timer | Time spent packing and uploading a filesystem image.                                |
| `persist-filesystem.pack.bytes`                | Gauge | Size of a packed up filesystem image.                                               |
| `persist-filesystem.pack.milliseconds`         | Timer | Time spent packing the contents of a filesystem.                                    |
| `persist-filesystem.upload.milliseconds`       | Timer | Time spent uploading a packed up filesystem image.                                  |
| `plan-json.generate.bytes`                     | Gauge | Size of a generated JSON-formatted plan.                                            |
| `plan-json.generate.milliseconds`              | Timer | Time spent generating a JSON plan.                                                  |
| `plan-json.upload.milliseconds`                | Timer | Time spent uploading a JSON plan.                                                   |
| `provider-schemas-json.generate.bytes`         | Gauge | Size of a generated JSON-formatted provider schemas file.                           |
| `provider-schemas-json.generate.milliseconds`  | Timer | Time spent generating the provider schemas document.                                |
| `provider-schemas-json.upload.milliseconds`    | Timer | Time spent uploading a provider schemas document.                                   |
| `restore-filesystem.milliseconds`              | Timer | Time spent downloading and unpacking a filesystem image.                            |
| `restore-filesystem.download.bytes`            | Gauge | Size of a downloaded filesystem image.                                              |
| `restore-filesystem.download.milliseconds`     | Timer | Time spent downloading a filesystem image.                                          |
| `restore-filesystem.unpack.milliseconds`       | Timer | Time spent unpacking the contents of a filesystem image.                            |
| `run-meta.additions`                           | Gauge | Number of resources added or proposed to be added in a Terraform operation.         |
| `run-meta.changes`                             | Gauge | Number of resources changed or proposed to change in a Terraform operation.         |
| `run-meta.destructions`                        | Gauge | Number of resources destroyed or proposed to be destroyed in a Terraform operation. |
| `setup-backend.milliseconds`                   | Timer | Time spent configuring Terraform CLI for Terraform Cloud.                           |
| `setup-ssh-key.milliseconds`                   | Timer | Time spent configuring an SSH key for Terraform to use while downloading modules.   |
| `setup-ssh-key.check-git-version.milliseconds` | Timer | Time spent ensuring the local version of "git" is adequate for leveraging SSH auth. |
| `setup-terraform-binary.milliseconds`          | Timer | Time spent downloading and unpacking a Terraform OSS release.                       |
| `setup-terraform-binary.download.bytes`        | Gauge | Size of a downloaded Terraform OSS version.                                         |
| `setup-terraform-binary.download.milliseconds` | Timer | Time spent downloading a Terraform OSS release.                                     |
| `setup-terraform-binary.unpack.bytes`          | Gauge | Size of an unpacked Terraform OSS release.                                          |
| `setup-terraform-binary.unpack.milliseconds`   | Timer | Time spent unpacking a Terraform OSS release.                                       |
| `setup-terraform-config.milliseconds`          | Timer | Time spent downloading and unpacking a Terraform configuration.                     |
| `setup-terraform-config.download.bytes`        | Gauge | Size of a downloaded Terraform configuration.                                       |
| `setup-terraform-config.download.milliseconds` | Timer | Time spent downloading a Terraform configuration.                                   |
| `setup-terraform-config.unpack.milliseconds`   | Timer | Time spent unpacking a downloaded Terraform configuration.                          |
| `setup-terraform-config.verify.milliseconds`   | Timer | Time spent verifying a Terraform configuration.                                     |
| `setup-terraform-variables.milliseconds`       | Timer | Time spent configuring Terraform variables provided by TFC.                         |
| `setup-terraform-variables.write_file.bytes`   | Gauge | Size of a tfvars file, generated by TFC-provided input variables.                   |
| `terraform-init.milliseconds`                  | Timer | Time spent running `terraform init`.                                                |
| `terraform-apply.milliseconds`                 | Timer | Time spent running `terraform apply`.                                               |
| `terraform-plan.milliseconds`                  | Timer | Time spent running `terraform plan`.                                                |
| `terraform-version.milliseconds`               | Timer | Time spent running `terraform version`.                                             |

## Policy component metrics

The following metrics are emitted by the `policy` component, which is
responsible for handling OPA policy enforement operations. All metrics in this
section are prefixed by `tfc-agent.policy.`.

| Metric name                                    | Type  | Description                                              |
| ---------------------------------------------- | ----- | -------------------------------------------------------- |
| `execute.milliseconds`                         | Timer | Time spent handling a policy operation.                  |
| `policy-set.download.bytes`                    | Gauge | Size of a downloaded policy set.                         |
| `policy-set.download.milliseconds`             | Timer | Time spent downloading a policy set.                     |
| `policy-set.unpack.milliseconds`               | Timer | Time spent unpacking a policy set.                       |
| `generate-opa-input-file.milliseconds`         | Timer | Time spent generating the OPA input file.                |
| `parse-opa-config.milliseconds`                | Timer | Time spent parsing the OPA configuration.                |
| `plan-json-download.milliseconds`              | Timer | Time spent downloading the Terraform JSON plan document. |
| `plan-json-download.bytes`                     | Gauge | Size of a downloaded Terraform JSON plan document.       |
| `run-opa-eval.milliseconds`                    | Timer | Time spent evaluating OPA policies.                      |
| `setup-opa-binary.milliseconds`                | Timer | Time spent downloading the OPA binary.                   |
| `setup-policies.milliseconds`                  | Timer | Time spent setting up individually managed policies.     |
| `setup-policy-engines.milliseconds`            | Timer | Time spent setting up policy runtimes.                   |
| `setup-subjects.milliseconds`                  | Timer | Time spent setting up subjects for policy enforcement.   |
